--- a/static/css/pages/register-v2.css
+++ b/static/css/pages/register-v2.css
@@ -5,7 +5,7 @@
   background-image: url("../../images/login.jpg");
 }
 .page-register-v2.page-dark.layout-full:after {
-  background-color: rgba(33, 33, 33, .6);
+  background-color: rgba(38, 50, 56, .6);
 }
 .page-register-v2 .page-brand-info {
   margin: 220px 100px 0 90px;
@@ -28,8 +28,8 @@
   right: 0;
   height: auto;
   min-height: 100%;
-  padding: 150px 60px 180px;
-  color: #757575;
+  padding: 60px 60px 180px;
+  color: #76838f;
   background: #fff;
 }
 .page-register-v2 .page-register-main .brand {
@@ -41,7 +41,7 @@
 .page-register-v2 .page-register-main .brand-text {
   display: inline-block;
   margin: 11px 0 11px 20px;
-  color: #3f51b5;
+  color: #62a8ea;
   vertical-align: middle;
 }
 .page-register-v2 form {
