--- a/templates/layout/sections/menubar.html
+++ b/templates/layout/sections/menubar.html
@@ -33,12 +33,12 @@
                             </a>
                             <ul class="site-menu-sub">
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="{% url 'index' %}">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'My Timetable' %}</span>
                                     </a>
                                 </li>
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="../layouts/menu-collapsed-alt.html">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'Timetable Search' %}</span>
                                     </a>
                                 </li>
@@ -53,12 +53,12 @@
                             </a>
                             <ul class="site-menu-sub">
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="../layouts/menu-collapsed.html">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'Students' %}</span>
                                     </a>
                                 </li>
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="../layouts/menu-collapsed-alt.html">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'Enroll' %}</span>
                                     </a>
                                 </li>
@@ -72,22 +72,22 @@
                             </a>
                             <ul class="site-menu-sub">
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="../layouts/menu-collapsed.html">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'Students' %}</span>
                                     </a>
                                 </li>
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="../layouts/menu-collapsed-alt.html">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'Attendance' %}</span>
                                     </a>
                                 </li>
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="../layouts/menu-collapsed-alt.html">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'Ranking' %}</span>
                                     </a>
                                 </li>
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="../layouts/menu-collapsed-alt.html">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'Incidents' %}</span>
                                     </a>
                                 </li>
@@ -106,12 +106,12 @@
                                     </a>
                                 </li>
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="../layouts/menu-collapsed-alt.html">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'Review' %}</span>
                                     </a>
                                 </li>
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="../layouts/menu-collapsed-alt.html">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'Ranking' %}</span>
                                     </a>
                                 </li>
@@ -125,17 +125,17 @@
                             </a>
                             <ul class="site-menu-sub">
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="../layouts/menu-collapsed.html">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'New Incident' %}</span>
                                     </a>
                                 </li>
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="../layouts/menu-collapsed-alt.html">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'My Incidents' %}</span>
                                     </a>
                                 </li>
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="../layouts/menu-collapsed-alt.html">
+                                    <a class="animsition-link" href="javascript:void(0)">
                                         <span class="site-menu-title">{% trans 'Manage' %}</span>
                                     </a>
                                 </li>
