--- a/templates/schedule/timetableentry_archive_day.html
+++ b/templates/schedule/timetableentry_archive_day.html
@@ -345,10 +345,12 @@
     function addfalta(event){
         console.log(event.target.id);
         var pieces = event.target.id.split("_");
+        var data = { status: pieces[0], entry: pieces[1], student: pieces[2]};
+        console.log(data);
         $.ajax({
             url : "{% url 'attendance:entry-add' %}", // the endpoint
             type : "POST", // http method
-            data : { status: pieces[0], entry: pieces[1], student: pieces[2]}, // data sent with the post request
+            data : data, // data sent with the post request
             // handle a successful response
             success : function(json) {
                 console.log(json); // log the returned json to the console
