--- a/templates/schedule/timetableentry_archive_day.html
+++ b/templates/schedule/timetableentry_archive_day.html
@@ -345,6 +345,9 @@
     function addfalta(event){
         console.log(event.target.id);
         var pieces = event.target.id.split("_");
+        if (pieces.length < 3) {
+            pieces = $("#"+event.target.id).parent('label').id.split("_");
+        }
         var data = { status: pieces[0], entry: pieces[1], student: pieces[2]};
         console.log(data);
         $.ajax({
