--- a/templates/schedule/timetableentry_archive_day.html
+++ b/templates/schedule/timetableentry_archive_day.html
@@ -346,7 +346,7 @@
         console.log(event.target.id);
         var pieces = event.target.id.split("_");
         if (pieces.length < 3) {
-            pieces = $("#"+event.target.id).parent('label').id.split("_");
+            pieces = $("#"+event.target.id).parent('label').get(0).id.split("_");
         }
         var data = { status: pieces[0], entry: pieces[1], student: pieces[2]};
         console.log(data);
