--- a/templates/schedule/timetableentry_archive_day.html
+++ b/templates/schedule/timetableentry_archive_day.html
@@ -342,17 +342,12 @@
         return false;
         e.preventDefault();
     });*/
-    var test;
     function addfalta(event){
-        test = event.target;
-        console.log(event.target);
         var pieces = event.target.id.split("_");
         if (pieces.length < 3) {
-            console.log()
-            pieces = $("#"+event.target.id).parent('label').get(0).id.split("_");
+            pieces = $(event.target).parent('label').get(0).id.split("_");
         }
         var data = { status: pieces[0], entry: pieces[1], student: pieces[2]};
-        console.log(data);
         $.ajax({
             url : "{% url 'attendance:entry-add' %}", // the endpoint
             type : "POST", // http method
