--- a/templates/institution/dashboard.html
+++ b/templates/institution/dashboard.html
@@ -6,6 +6,16 @@
         <div class="col-lg-8 col-md-12">
 
           <div class="row">
+               <div class="col-md-6">
+              <div class="panel panel-bordered panel-warning">
+                <div class="panel-heading">
+                  <h3 class="panel-title">Avís!</h3>
+                </div>
+                <div class="panel-body">Degut a una errada a la configuració de les assignatures de modalitat no apareixen els alumnes correctes.
+                A partir de dimecres 16 ja es podrà utilitzar BEMS amb normalitat.</div>
+              </div>
+            </div>
+              
               <a href="{% url "attendance:call-today" %}">
                 <div class="col-md-6">
               <!-- Widget -->
