--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -116,7 +116,7 @@
             <!-- End Navbar Toolbar -->
             <!-- Navbar Toolbar Right -->
             <ul class="nav navbar-toolbar navbar-right navbar-toolbar-right">
-                <li class="dropdown">
+                <!--<li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)"
                        data-animation="scale-up"
                        aria-expanded="false" role="button">
@@ -144,7 +144,7 @@
                                 <span class="flag-icon flag-icon-nl"></span> Dutch</a>
                         </li>
                     </ul>
-                </li>
+                </li>-->
                 {% if user.is_authenticated %}
                     <li class="dropdown">
                         <a class="navbar-avatar dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false"
@@ -176,7 +176,7 @@
                         </ul>
                     </li>
                 {% endif %}
-                <li style="display: none" class="dropdown">
+                <!--<li class="dropdown">
                     <a data-toggle="dropdown" href="javascript:void(0)" title="Notifications" aria-expanded="false"
                        data-animation="scale-up" role="button">
                         <i class="icon wb-bell" aria-hidden="true"></i>
@@ -273,7 +273,7 @@
                         </li>
                     </ul>
                 </li>
-                <li style="display: none" class="dropdown">
+                <li class="dropdown">
                     <a data-toggle="dropdown" href="javascript:void(0)" title="Messages" aria-expanded="false"
                        data-animation="scale-up" role="button">
                         <i class="icon wb-envelope" aria-hidden="true"></i>
@@ -369,7 +369,7 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li>-->
                 <li id="toggleChat">
                     <a data-toggle="site-sidebar" href="javascript:void(0)" title="Chat" data-url="../site-sidebar.tpl">
                         <i class="icon wb-settings" aria-hidden="true"></i>
