--- a/templates/layout/sections/menubar.html
+++ b/templates/layout/sections/menubar.html
@@ -64,10 +64,11 @@
                                 </li>
                             </ul>
                         </li>
+                        {% if profile.is_tutor %}
                         <li class="site-menu-item has-sub">
                             <a href="javascript:void(0)">
                                 <i class="site-menu-icon fa-users" aria-hidden="true"></i>
-                                <span class="site-menu-title">2n ESO B</span>
+                                <span class="site-menu-title">{{ profile.tutoria.name }}</span>
                                 <span class="site-menu-arrow"></span>
                             </a>
                             <ul class="site-menu-sub">
@@ -93,6 +94,7 @@
                                 </li>
                             </ul>
                         </li>
+                        {% endif %}
                         <li class="site-menu-item has-sub">
                             <a href="javascript:void(0)">
                                 <i class="site-menu-icon fa-check" aria-hidden="true"></i>
