--- a/templates/schedule/timetableentry_archive_day.html
+++ b/templates/schedule/timetableentry_archive_day.html
@@ -4,12 +4,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="/static/css/extra_css.css">
 {% endblock %}
-{% block aside %}
-<div class="page-aside-switch">
-        <i class="icon wb-chevron-left" aria-hidden="true"></i>
-        <i class="icon wb-chevron-right" aria-hidden="true"></i>
-      </div>
-      <div class="page-aside-inner">
+{% block aside_content %}
           <br>
           <div class="row no-space" style="position:relative">
               <div class="col-sm-3 vertical-align-middle">
@@ -80,7 +75,6 @@
                         <!-- End Modal -->
           </div>
         </section>
-      </div>
 {% endblock %}
 {% block page_header %}
 {% endblock %}
