--- a/templates/layout/sections/menubar.html
+++ b/templates/layout/sections/menubar.html
@@ -95,6 +95,8 @@
                             </ul>
                         </li>
                         {% endif %}
+                        {{ profile }}
+                        {{ profile.tutoria }}
                         <li class="site-menu-item has-sub">
                             <a href="javascript:void(0)">
                                 <i class="site-menu-icon fa-check" aria-hidden="true"></i>
