--- a/templates/schedule/timetableentry_archive_day.html
+++ b/templates/schedule/timetableentry_archive_day.html
@@ -7,10 +7,10 @@
 {% block aside_content %}
           <br>
           <div class="row no-space" style="position:relative">
-              <div class="col-sm-3 vertical-align-middle">
+              <div class="col-xs-3 vertical-align-middle">
                   <a class="list-group-item" href="{% url 'attendance:call' day=previous_day.day month=previous_day.month year=previous_day.year %}" style="padding: 30px"><i class="icon fa-step-backward" aria-hidden="true"></i></a>
               </div>
-              <div class="col-sm-6">
+              <div class="col-xs-6">
                   <div class="panel panel-bordered panel-danger" style=" margin: 0px 10px; text-align: center;
 -webkit-box-shadow: 0px 0px 3px 1px rgba(177,177,178,0.75); -moz-box-shadow: 0px 0px 3px 1px rgba(177,177,178,0.75); box-shadow: 0px 0px 3px 1px rgba(177,177,178,0.75);">
               <div class="panel-heading">
@@ -21,7 +21,7 @@
               </div>
           </div>
               </div>
-              <div class="col-sm-3">
+              <div class="col-xs-3">
                   <a class="list-group-item" href="{% url 'attendance:call' day=next_day.day month=next_day.month year=next_day.year %}" style="text-align: right; padding: 30px; {% if is_today %}visibility: hidden;{% endif %}" ><i class="icon fa-step-forward" aria-hidden="true"></i></a>
               </div>
           </div>
