--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -414,7 +414,7 @@
 
                     <div class="page-aside-inner scrollable is-enabled scrollable-vertical"
                          data-plugin="pageAsideScroll" style="position: relative;">
-                        <div data-role="container" class="scrollable-container" style="height: 236px; width: 259px;">
+                        <div data-role="container" class="scrollable-container" style="width: 259px;">
                             <div data-role="content" class="scrollable-content" style="width: 259px;">
                                 {% block aside_content %}
                                 {% endblock aside_content %}
