--- a/templates/incidents/incident_form.html
+++ b/templates/incidents/incident_form.html
@@ -42,10 +42,10 @@
                         <div class="col-sm-10">
                             <select class="form-control" data-plugin="select2" data-placeholder="Cerca" id="teacher">
                                 {% for teacher in form.fields.teacher.choices %}
-                                    {% if teacher == profile %}
-                                    <option value="{{teacher.pk}}" selected>{{teacher}}</option>
+                                    {% if teacher.pk == profile.pk %}
+                                    <option value="{{teacher.pk}}" selected>{{teacher.first_name}} {{ teacher.last_name }}</option>
                                     {% else %}
-                                    <option value="{{teacher.pk}}">{{teacher}}</option>
+                                    <option value="{{teacher.pk}}">{{teacher.first_name}} {{ teacher.last_name }}</option>
                                     {% endif %}
                                 {% endfor %}
                             </select>
