Incidents first changes

--- a/templates/attendance/attendanceentry_filter.html
+++ b/templates/attendance/attendanceentry_filter.html
@@ -1,5 +1,6 @@
 {% extends 'layout/base.html' %}
 {% load i18n %}
+{% block body_args %}page-aside-fixed page-aside-left{% endblock %}
 {% block page_attr %}bg-white{% endblock %}
 {% block aside %}
     <div class="page-aside-switch">
