--- a/templates/institution/dashboard.html
+++ b/templates/institution/dashboard.html
@@ -18,21 +18,17 @@
 
               <a href="{% url "attendance:call-today" %}">
                 <div class="col-md-6">
-              <!-- Widget -->
-              <div class="widget">
-                <div class="widget-content padding-35 bg-white clearfix">
-                  <div class="pull-left white">
-                    <i class="icon icon-circle icon-2x wb-clipboard bg-red-600" aria-hidden="true"></i>
-                  </div>
-                  <div class="counter counter-md counter text-right pull-right">
-                    <div class="counter-number-group">
+                    <div class="card card-block p-35 clearfix">
+                <div class="pull-xs-left white">
+                  <i class="icon icon-circle icon-2x wb-clipboard bg-red-600" aria-hidden="true"></i>
+                </div>
+                <div class="counter counter-md counter text-xs-right pull-xs-right">
+                  <div class="counter-number-group">
                       <span class="counter-number-related text-capitalize">Passar llista</span>
                     </div>
                     <div class="counter-label text-capitalize font-size-16">(Funcionalitats limitades)</div>
-                  </div>
                 </div>
               </div>
-              <!-- End Widget -->
             </div>
               </a>
 
