--- a/templates/incidents/incident_form.html
+++ b/templates/incidents/incident_form.html
@@ -1,6 +1,12 @@
 {% extends 'layout/base.html' %}
 {% load i18n %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="/static/vendor/jquery-labelauty/jquery-labelauty.css">
+    <link rel="stylesheet" href="/static/vendor/select2/select2.css">
+    <link rel="stylesheet" href="/static/vendor/bootstrap-datepicker/bootstrap-datepicker.css">
+{% endblock %}
+
 {% block content %}
     <div class="pearls row">
         <div class="pearl current col-xs-4" id="progress-1">
@@ -22,27 +28,41 @@
               <h2 class="panel-title">Nou incident</h2>
             </div>
             <div class="panel-body">
-              <div class="form-horizontal">
-                    <div class="form-group">
+                {% if form.errors %}
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                            <div class="alert alert-danger">
+                                <strong>{{ field.html_name }} {{ error|escape }}</strong>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                    {% for error in form.non_field_errors %}
+                        <div class="alert alert-danger">
+
+                            <strong>{{ error|escape }}</strong>
+                        </div>
+                    {% endfor %}
+                {% endif %}
+              <form class="form-horizontal" method="post">
+                    {% csrf_token %}
+                    <div class="row form-group">
                         <label class="control-label col-sm-2">Alumne/a</label>
                         <div class="col-sm-10">
-                            <select class="form-control" multiple data-plugin="select2" data-placeholder="Cerca" id="student">
+                            <select class="form-control" multiple data-plugin="select2" data-placeholder="Cerca" id="{{ form.students.id_for_label }}_select2">
                                 {% for student in students %}
                                     <option value="{{student.pk}}">{{student.first_name}} {{student.last_name}}</option>
                                 {% endfor %}
                             </select>
+                            <input name="{{ form.students.html_name }}" id="{{ form.students.id_for_label }}" hidden>
                         </div>
                     </div>
                     {% if user.is_superuser %}
-                    <div class="form-group">
-                    {% else %}
-                    <div class="form-group" style="display:none">
-                    {% endif %}
+                    <div class="row form-group">
                         <label class="control-label col-sm-2">Professor/a</label>
                         <div class="col-sm-10">
-                            <select class="form-control" data-plugin="select2" data-placeholder="Cerca" id="teacher">
+                            <select class="form-control" data-plugin="select2" data-placeholder="Cerca" name="{{ form.teacher.html_name }}" id="{{ form.teacher.id_for_label }}">
                                 {% for teacher in form.fields.teacher.queryset %}
-                                    {% if teacher.pk == profile.pk %}
+                                    {% if teacher == profile %}
                                     <option value="{{teacher.pk}}" selected>{{teacher.first_name}} {{ teacher.last_name }}</option>
                                     {% else %}
                                     <option value="{{teacher.pk}}">{{teacher.first_name}} {{ teacher.last_name }}</option>
@@ -52,102 +72,93 @@
                         </div>
 
                     </div>
-                    <div class="form-group">
+                    {% endif %}
+                    <div class="row form-group">
                         <label class="control-label col-sm-2">Dia</label>
                         <div class="col-sm-5">
-                            <input type="text" class="form-control" data-plugin="datepicker" id="datepicker">
+                            <input type="text" class="form-control" data-plugin="datepicker" data-date-format="dd/mm/yyyy" name="{{ form.date.html_name }}" id="{{ form.date.id_for_label }}">
                         </div>
                         <label class="control-label col-sm-1">Hora</label>
                         <div class="col-sm-4">
-                            <select class="form-control" data-plugin="select2" data-placeholder="Selecciona l'hora" data-allow-clear="true" id="unit">
-                                {% for unit in units %}
-                                    <option value="{{unit.pk}}">{{unit.start|date:'H:i'}} - {{unit.end|date:'H:i'}}</option>
+                            <select class="form-control" data-plugin="select2" data-placeholder="Selecciona l'hora" data-allow-clear="true" name="{{ form.unit.html_name }}" id="{{ form.unit.id_for_label }}">
+                                {% for value, text in form.fields.unit.choices %}
+                                    <option value="{{value}}">{{text}}</option>
                                 {% endfor %}
                             </select>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="row form-group">
                         <label class="control-label col-sm-2">Descripció</label>
                         <div class="col-sm-10">
-                            <textarea class="form-control" id="description" rows="5"></textarea>
+                            <textarea class="form-control" name="{{ form.description.html_name }}" id="{{ form.description.id_for_label }}" rows="5"></textarea>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="row form-group">
                         <label class="control-label col-sm-2">Càstig proposat <small>(opcional)</small></label>
                         <div class="col-sm-10">
-                            <textarea class="form-control" id="comments" rows="5"></textarea>
+                            <textarea class="form-control" name="{{ form.comments.html_name }}" id="{{ form.comments.id_for_label }}" rows="5"></textarea>
                         </div>
                     </div>
                     {% if user.is_superuser %}
                     <hr>
-                    <div class="form-group">
-                        <label class="control-label col-sm-2">Càstig</label>
-                        <div class="col-sm-5">
-                            <select class="form-control" data-plugin="select2" data-placeholder="Selecciona tipus de cástig" data-allow-clear="true" id="punishmentType">
-                                {% for pt in punishmentTypes %}
-                                    <option value="{{pt.pk}}">{{pt.name}}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-2"><small>Dia</small></label>
-                        <div class="col-sm-5">
-                            <input type="text" class="form-control" data-plugin="datepicker" id="pday">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-2"><small>Període</small></label>
-                        <div class="col-sm-5">
-                            <input type="text" class="form-control" data-plugin="datepicker" id="pstart">
-                        </div>
-                        <div class="col-sm-5">
-                            <input type="text" class="form-control" data-plugin="datepicker" id="pend">
-                        </div>
-                    </div>
-                    <hr>
-                     <div class="form-group">
+                     <div class="row form-group">
                         <label class="control-label col-sm-2">Categoria</label>
                          <div class="col-sm-10">
-                         <select class="form-control" data-plugin="select2" data-placeholder="Selecciona categoria" data-allow-clear="true" id="category">
-                                {% for cat in categories %}
-                                    <option value="{{cat.pk}}">{{cat.name}}</option>
+                         <select class="form-control" data-plugin="select2" data-placeholder="Selecciona categoria" data-allow-clear="true" name="{{ form.category.html_name }}" id="{{ form.category.id_for_label }}">
+                                {% for value, text in form.fields.category.choices %}
+                                    <option value="{{value}}">{{text}}</option>
                                 {% endfor %}
                             </select>
                              </div>
                      </div>
                     {% endif %}
                     {% if user.is_superuser %}
-                    <div class="form-group">
+                    <div class="row form-group">
                         <label class="control-label col-sm-2">Opcions</label>
                         <div class="col-sm-1"></div>
                         <div class="col-sm-3">
                             <div class="form-group">
-                                <input type="checkbox" class="to-labelauty" id="accepted" name="accepted" data-plugin="labelauty"
+                                <input type="checkbox" class="to-labelauty" name="{{ form.accepted.html_name }}" id="{{ form.accepted.id_for_label }}" data-plugin="labelauty"
                                 data-labelauty="Pendent|Acceptat" checked/>
                               </div>
                         </div>
                         <div class="col-sm-3">
                             <div class="form-group">
-                                <input type="checkbox" class="to-labelauty" id="returned" name="returned" data-plugin="labelauty"
+                                <input type="checkbox" class="to-labelauty" name="{{ form.returned.html_name }}" id="{{ form.returned.id_for_label }}" data-plugin="labelauty"
                                 data-labelauty="No retornat|Retornat"/>
                               </div>
                         </div>
                         <div class="col-sm-3">
                             <div class="form-group">
-                                <input type="checkbox" class="to-labelauty" id="completed" name="completed" data-plugin="labelauty"
+                                <input type="checkbox" class="to-labelauty" name="{{ form.completed.html_name }}" id="{{ form.completed.id_for_label }}" data-plugin="labelauty"
                                 data-labelauty="No completat|Completat"/>
                               </div>
                         </div>
                     </div>
                     {% endif %}
-                    <div class="form-group" style="text-align: right">
+                    <div class="row form-group" style="text-align: right">
                       <button type="submit" id="send-report" class="btn btn-primary">Envia</button>
                     </div>
-              </div>
+              </form>
             </div>
         <div class="panel-footer">
         </div>
     </div>
-    {{ form.as_p }}
+
 {% endblock content %}
+{% block extra_js %}
+      <script src="/static/vendor/jquery-labelauty/jquery-labelauty.js"></script>
+    <script src="/static/vendor/select2/select2.full.min.js"></script>
+    <script src="/static/vendor/bootstrap-datepicker/bootstrap-datepicker.js"></script>
+
+      <script src="/static/js/Plugin/jquery-labelauty.js"></script>
+    <script src="/static/js/Plugin/select2.js"></script>
+    <script src="/static/js/Plugin/bootstrap-datepicker.js"></script>
+    <script>
+        var students = $('#{{ form.students.id_for_label }}_select2');
+
+        students.on("change", function (e) {
+            $('#{{ form.students.id_for_label }}').val(students.val());
+        });
+    </script>
+{% endblock %}
