--- a/templates/layout/sections/menubar.html
+++ b/templates/layout/sections/menubar.html
@@ -1,11 +1,10 @@
 {% load i18n %}
-<link rel="stylesheet" href="/static/css/font-awesome.min.css">
 <div class="site-menubar">
     <div class="site-menubar-body">
         {% block menubar_body %}
             <div>
                 <div>
-                    <ul class="site-menu">
+                    <ul class="site-menu" data-plugin="menu">
                         <li class="site-menu-category">{% trans 'General' %}</li>
                         <li class="site-menu-item">
                             <a href="{% url 'index' %}">
