--- a/templates/layout/sections/scripts.html
+++ b/templates/layout/sections/scripts.html
@@ -1,35 +1,39 @@
 <!-- Core  -->
+<script src="/static/vendor/babel-external-helpers/babel-external-helpers.js"></script>
 <script src="/static/vendor/jquery/jquery.js"></script>
+<script src="/static/vendor/tether/tether.js"></script>
 <script src="/static/vendor/bootstrap/bootstrap.js"></script>
 <script src="/static/vendor/animsition/animsition.js"></script>
-<script src="/static/vendor/asscroll/jquery-asScroll.js"></script>
 <script src="/static/vendor/mousewheel/jquery.mousewheel.js"></script>
-<script src="/static/vendor/asscrollable/jquery.asScrollable.all.js"></script>
+<script src="/static/vendor/asscrollbar/jquery-asScrollbar.js"></script>
+<script src="/static/vendor/asscrollable/jquery-asScrollable.js"></script>
 <script src="/static/vendor/ashoverscroll/jquery-asHoverScroll.js"></script>
-<!-- Plugins -->
-<script src="/static/vendor/switchery/switchery.min.js"></script>
-<script src="/static/vendor/intro-js/intro.js"></script>
 <script src="/static/vendor/screenfull/screenfull.js"></script>
 <script src="/static/vendor/slidepanel/jquery-slidePanel.js"></script>
 <!-- Scripts -->
-<script src="/static/js/core.js"></script>
-<script src="/static/js/site.js"></script>
-<script src="/static/js/sections/menu.js"></script>
-<script src="/static/js/sections/menubar.js"></script>
-<script src="/static/js/sections/gridmenu.js"></script>
-<script src="/static/js/sections/sidebar.js"></script>
-<script src="/static/js/configs/config-colors.js"></script>
-<script src="/static/js/configs/config-tour.js"></script>
-<script src="/static/js/components/asscrollable.js"></script>
-<script src="/static/js/components/animsition.js"></script>
-<script src="/static/js/components/slidepanel.js"></script>
-<script src="/static/js/components/switchery.js"></script>
+<script src="/static/js/State.js"></script>
+<script src="/static/js/Component.js"></script>
+<script src="/static/js/Plugin.js"></script>
+<script src="/static/js/Base.js"></script>
+<script src="/static/js/Config.js"></script>
+<script src="/static/js/Section/Menubar.js"></script>
+<script src="/static/js/Section/GridMenu.js"></script>
+<script src="/static/js/Section/Sidebar.js"></script>
+<script src="/static/js/Section/PageAside.js"></script>
+<script src="/static/js/Plugin/menu.js"></script>
+<!-- Config -->
+<script src="/static/js/config/colors.js"></script>
+<script>
+Config.set('assets', '/static');
+</script>
+<!-- Init -->
+<script src="/static/js/Site.js"></script>
 <script>
 (function(document, window, $) {
-'use strict';
-var Site = window.Site;
-$(document).ready(function() {
-  Site.run();
-});
+  'use strict';
+  var Site = window.Site;
+  $(document).ready(function() {
+    Site.run();
+  });
 })(document, window, jQuery);
 </script>
