--- a/templates/schedule/timetableentry_archive_day.html
+++ b/templates/schedule/timetableentry_archive_day.html
@@ -2,13 +2,15 @@
 {% load studentstatus i18n %}
 {% block extra_css %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="/static/css/extra_css.css">
 {% endblock %}
+{% block body_args %}page-aside-fixed page-aside-left{% endblock %}
 {% block aside_content %}
           <br>
           <div class="row no-space" style="position:relative">
               <div class="col-xs-3 vertical-align-middle">
+                  {% if previous_day %}
                   <a class="list-group-item" href="{% url 'attendance:call' day=previous_day.day month=previous_day.month year=previous_day.year %}" style="padding: 30px"><i class="icon fa-step-backward" aria-hidden="true"></i></a>
+                  {% endif %}
               </div>
               <div class="col-xs-6">
                   <div class="panel panel-bordered panel-danger" style=" margin: 0px 10px; text-align: center;
@@ -22,7 +24,9 @@
           </div>
               </div>
               <div class="col-xs-3">
+                  {% if next_day %}
                   <a class="list-group-item" href="{% url 'attendance:call' day=next_day.day month=next_day.month year=next_day.year %}" style="text-align: right; padding: 30px; {% if is_today %}visibility: hidden;{% endif %}" ><i class="icon fa-step-forward" aria-hidden="true"></i></a>
+                  {% endif %}
               </div>
           </div>
         <section class="page-aside-section">
@@ -118,7 +122,7 @@
                     {% studentstatus student te %}
                 <tr>
                     <td style="vertical-align:middle" class="hidden-xs hidden-sm">
-                        <a class="navbar-avatar dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false" role="button">
+                        <a class="navbar-avatar" data-toggle="dropdown" href="#" aria-expanded="false" role="button">
                           <span class="avatar {% if status == "P" %}avatar-online{% endif %}{% if status == "R" %}avatar-busy{% endif %}{% if status == "F" %}avatar-away{% endif %}" id="img_{{te.pk}}_{{student.pk}}">
                             <img src="{{ student.get_profile_image }}" alt="...">
                             <i></i>
