--- a/templates/layout/sections/menubar.html
+++ b/templates/layout/sections/menubar.html
@@ -126,7 +126,7 @@
                             </a>
                             <ul class="site-menu-sub">
                                 <li class="site-menu-item">
-                                    <a class="animsition-link" href="javascript:void(0)">
+                                    <a class="animsition-link" href="{% url 'incidents:create' %}">
                                         <span class="site-menu-title">{% trans 'New Incident' %}</span>
                                     </a>
                                 </li>
